Enabled compressed keys
based on https://bitcointalk.org/index.php?topic=1160038.msg14942594#msg14942594

--- a/brainwallet.io.html
+++ b/brainwallet.io.html
@@ -1243,7 +1243,7 @@ newLink.href = 'data:image/png;base64,'+favIcon;
 docHead.appendChild(newLink);
 
 (function($){
-	var gen_compressed = false;
+	var gen_compressed = true;
 	var PUBLIC_KEY_VERSION = 0;
 	var PRIVATE_KEY_VERSION = 0x80;
 
